Country List UI

--- a/app/src/main/res/navigation/country_navigation.xml
+++ b/app/src/main/res/navigation/country_navigation.xml
@@ -7,16 +7,19 @@
 
     <fragment
         android:id="@+id/countryFragment"
-        android:name="com.example.kotlincountries.CountryFragment"
+        android:name="com.example.kotlincountries.view.CountryFragment"
         android:label="fragment_country"
         tools:layout="@layout/fragment_country" >
         <action
             android:id="@+id/action_countryFragment_to_feedFragment"
             app:destination="@id/feedFragment" />
+        <argument
+            android:name="countryUuid"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/feedFragment"
-        android:name="com.example.kotlincountries.FeedFragment"
+        android:name="com.example.kotlincountries.view.FeedFragment"
         android:label="fragment_feed"
         tools:layout="@layout/fragment_feed" >
         <action
