--- a/app/src/main/res/navigation/country_navigation.xml
+++ b/app/src/main/res/navigation/country_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/country_navigation"
-    app:startDestination="@id/countryFragment">
+    app:startDestination="@id/feedFragment">
 
     <fragment
         android:id="@+id/countryFragment"
@@ -15,7 +15,8 @@
             app:destination="@id/feedFragment" />
         <argument
             android:name="countryUuid"
-            app:argType="integer" />
+            app:argType="integer"
+            android:defaultValue="0" />
     </fragment>
     <fragment
         android:id="@+id/feedFragment"
